--- a/index.html
+++ b/index.html
@@ -15,6 +15,28 @@
 <script>
 var canvas = document.getElementById("myCanvas");
 var ctx = canvas.getContext("2d");
+
+// Red square
+ctx.beginPath();
+  ctx.rect(20,40,50,50);
+  ctx.fillStyle="#ff0000";
+  ctx.fill();
+ctx.closePath();
+
+// Green circle
+ctx.beginPath();
+  ctx.arc(240,160,20,0,Math.PI*2,false);
+  ctx.fillStyle="green";
+  ctx.fill();
+ctx.closePath();
+
+//Blue rectangle
+ctx.beginPath();
+  ctx.rect(160,10,100,40);
+  ctx.strokeStyle="rgba(0,0,255,0.5)"
+  ctx.stroke();
+ctx.closePath();
+
 </script>
 
 </body>
