--- a/index.html
+++ b/index.html
@@ -19,13 +19,11 @@ var x = canvas.width/2;
 var y = canvas.height-30;
 var dx = 2;
 var dy = -2;
+var ballRadius = 10;
 
-
-// Drawing code
 function drawBall() {
-
   ctx.beginPath();
-  ctx.arc(x, y, 10, 0, Math.PI*2);
+  ctx.arc(x, y, ballRadius, 0, Math.PI*2);
   ctx.fillStyle="#0095DD";
   ctx.fill();
   ctx.closePath();
@@ -34,6 +32,15 @@ function drawBall() {
 function draw() {
   ctx.clearRect(0, 0, canvas.width, canvas.height);
   drawBall();
+
+  if(y + dy > canvas.height - ballRadius || y + dy < 0) {
+    dy = -dy;
+  }
+
+  if(x + dx > canvas.width - ballRadius || x + dx < 0) {
+    dx = -dx;
+  }
+
   x += dx;
   y += dy;
 }
