--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <canvas id="myCanvas" width="480" height="320"></canvas>
 
 <script>
+
 var canvas = document.getElementById("myCanvas");
 var ctx = canvas.getContext("2d");
 var x = canvas.width/2;
@@ -32,7 +33,7 @@ document.addEventListener("keyup", keyUpHandler, false);
 function keyDownHandler(e) {
   if(e.keyCode == 39) {
     rightPressed = true;
-  } else if (e.keyCode == 37) {
+  } else if(e.keyCode == 37) {
     leftPressed = true;
   }
 }
@@ -40,7 +41,7 @@ function keyDownHandler(e) {
 function keyUpHandler(e) {
   if(e.keyCode == 39) {
     rightPressed = false;
-  } else if (e.keyCode == 37) {
+  } else if(e.keyCode == 37) {
     leftPressed = false;
   }
 }
@@ -48,40 +49,49 @@ function keyUpHandler(e) {
 function drawBall() {
   ctx.beginPath();
   ctx.arc(x, y, ballRadius, 0, Math.PI*2);
-  ctx.fillStyle="#0095DD";
+  ctx.fillStyle = "#0095DD";
   ctx.fill();
   ctx.closePath();
 }
 
 function drawPaddle() {
   ctx.beginPath();
-  ctx.rect(paddleX, canvas.height - paddleHeight, paddleWidth, paddleHeight);
+  ctx.rect(paddleX, canvas.height-paddleHeight, paddleWidth, paddleHeight);
   ctx.fillStyle = "#0095DD";
   ctx.fill();
   ctx.closePath();
 }
 
 function draw() {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-  drawBall();
-  drawPaddle();
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    drawBall();
+    drawPaddle();
 
-  if(x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
-    dx = -dx;
-  }
+    if(x + dx > canvas.width-ballRadius || x + dx < ballRadius) {
+        dx = -dx;
+    }
+    if(y + dy < ballRadius) {
+        dy = -dy;
+    }
+    else if(y + dy > canvas.height-ballRadius) {
+        if(x > paddleX && x < paddleX + paddleWidth) {
+            dy = -dy;
+        }
+        else {
+            alert("GAME OVER");
+            document.location.reload();
+        }
+    }
 
-  if(y + dy > canvas.height - ballRadius || y + dy < ballRadius) {
-    dy = -dy;
-  }
+    if(rightPressed && paddleX < canvas.width-paddleWidth) {
+        paddleX += 7;
+    }
+    else if(leftPressed && paddleX > 0) {
+        paddleX -= 7;
+    }
 
-  x += dx;
-  y += dy;
-
-  if(rightPressed && paddleX < canvas.width - paddleWidth) {
-    paddleX += 7;
-  } else if(leftPressed && paddleX > 0) {
-    paddleX -= 7;
-  }
+    x += dx;
+    y += dy;
 }
 
 setInterval(draw, 10);
