--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ var brickOffsetLeft = 30;
 var brickX = (c*(brickWidth+brickPadding))+brickOffsetLeft;
 var brickY = (r*(brickHeight+brickPadding))+brickOffsetTop;
 var score = 0;
+var lives = 3;
 
 var bricks = [];
 for(var c=0; c<brickColumnCount; c++) {
@@ -82,7 +83,7 @@ function collisionDetection() {
           b.status = 0;
           score++;
           if(score == brickRowCount*brickColumnCount) {
-            alert("YOU WIN! CONGRATULATIONS!");
+            alert("YOU LIVED");
             document.location.reload();
           }
         }
@@ -95,6 +96,12 @@ function drawScore() {
   ctx.font = "16px Arial";
   ctx.fillStyle = "#0095DD";
   ctx.fillText("Score: "+score, 8, 20);
+}
+
+function drawLives() {
+    ctx.font = "16px Arial";
+    ctx.fillStyle = "#0095DD";
+    ctx.fillText("Lives: "+lives, canvas.width-65, 20);
 }
 
 function drawBall() {
@@ -137,6 +144,7 @@ function draw() {
     drawBall();
     drawPaddle();
     drawScore();
+    drawLives();
     collisionDetection();
 
     if(x + dx > canvas.width-ballRadius || x + dx < ballRadius) {
@@ -150,8 +158,18 @@ function draw() {
             dy = -dy;
         }
         else {
-            alert("GAME OVER");
+          lives--;
+          if(!lives) {
+            alert("YOU DIED");
             document.location.reload();
+          }
+          else {
+            x = canvas.width/2;
+            y = canvas.height-30;
+            dx = 2;
+            dy = -2;
+            paddleX = (canvas.width-paddleWidth)/2;
+          }
         }
     }
 
@@ -164,9 +182,11 @@ function draw() {
 
     x += dx;
     y += dy;
+
+  requestAnimationFrame(draw);
 }
 
-setInterval(draw, 10);
+draw();
 </script>
 
 </body>
